--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<canvas id="game" width="800" height="500"></canvas>
 <script type="text/javascript" src="KotlinFortuneAndFame.js"></script>
 </body>
 </html>
